pakistan update schedule round2 && leader board round1

--- a/index.html
+++ b/index.html
@@ -463,14 +463,14 @@ and open the template in the editor.
 
 <div class="tab-two">
   <button class="demo3" onclick="infofunc1(event, 'shedule')" id="mybutton2"><img src="img/Shedule-select-btn.png" alt="" class="shedule-btn"></button>
-  <button disabled class="demo3" onclick="infofunc1(event, 'leaderboard')" ><img src="img/Lederboard-Select-btn.png" alt="" class="shedule-btn"   ></button>
+  <button class="demo3" onclick="infofunc1(event, 'leaderboard')" ><img src="img/Lederboard-Select-btn.png" alt="" class="shedule-btn"   ></button>
 </div>
 
 
   <div id="shedule" class="demo4">
     <div class="tab-two">
-      <button class="demo5" onclick="infofunc2(event, 'leadr1')" id="mybutton3"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
-      <button disabled class="demo5" onclick="infofunc2(event, 'leadr2')"><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr1')"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr2')" id="mybutton3"><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
     </div>
 
       <div id="leadr1" class="demo6">
@@ -631,14 +631,14 @@ and open the template in the editor.
 
       <div id="leadr2" class="demo6">
 
-        <table class="leaderboard-bg stable">
+        <table id="pakTable4" class="leaderboard-bg stable">
           <tr class="title-1">
-            <th>Mangalam Agency	</th>
+            <th>Knowledge Is Power	</th>
             <th><img src="img/VS.png" alt="" class="vs"></th> 
-            <th>Avengers Agency	</th>
+            <th>Young Star Agency	</th>
             <th>Date & Time</th>
           </tr>
-          <tr>
+          <!-- <tr>
             <td><a href="http://www.kktv1.com/m/?roomid=631543176">631543176</a></td>
             <td></td>
             <td><a href="http://www.kktv1.com/m/?roomid=614097927">614097927</a></td>
@@ -653,19 +653,22 @@ and open the template in the editor.
             <td><a href="http://www.kktv1.com/m/?roomid=635468097">635468097</a></td>
             <td></td>
             <td><a href="http://www.kktv1.com/m/?roomid=635145031">635145031</a></td>
-          </tr>
+          </tr> -->
+          <tbody id="pakistanTableBody4">
+
+          </tbody>
         </table>
 
-       <!-- <br>
+       <br>
 
-        <table class="leaderboard-bg stable">
+        <table id="pakTable5" class="leaderboard-bg stable">
           <tr class="title-1">
-            <th>New Shining Agency	</th>
+            <th>M Arfan Agency</th>
             <th><img src="img/VS.png" alt="" class="vs"></th> 
-            <th>Royal Agency	</th>
+            <th>ZEE</th>
             <th>Date & Time</th>
           </tr>
-          <tr>
+          <!-- <tr>
             <td><a href="http://www.kktv1.com/m/?roomid=602780845">602780845</a></td>
             <td></td>
             <td><a href="http://www.kktv1.com/m/?roomid=644707786">644707786</a></td>
@@ -680,10 +683,15 @@ and open the template in the editor.
             <td><a href="http://www.kktv1.com/m/?roomid=627070013">627070013</a></td>
             <td></td>
             <td><a href="http://www.kktv1.com/m/?roomid=644729261">644729261</a></td>
-          </tr>
+          </tr> -->
+
+          <tbody id="pakistanTableBody5">
+
+          </tbody>
+
         </table>
 
-        <br>-->
+        <br>
 <!-- 
         <table class="leaderboard-bg stable">
           <tr class="title-1">
