changed table header

--- a/index.html
+++ b/index.html
@@ -478,9 +478,9 @@ and open the template in the editor.
         <table id="pakTable1" class="leaderboard-bg stable">
           <thead>
             <tr class="title-1">
-              <th>Rocking Agency</th>
+              <th>Good Hope Agency</th>
               <th><img src="img/VS.png" alt="" class="vs" /></th>
-              <th>Knowledge is power</th>
+              <th>King Khan Agency</th>
               <th>Date & Time</th>
             </tr>
           </thead>
@@ -510,9 +510,9 @@ and open the template in the editor.
         <table id="pakTable2" class="leaderboard-bg stable">
           <thead>
             <tr class="title-1">
-              <th>Good Hope Agency</th>
-              <th><img src="img/VS.png" alt="" class="vs" /></th>
               <th>ZEE Agency</th>
+              <th><img src="img/VS.png" alt="" class="vs" /></th>
+              <th>M Arfan Agency</th>
               <th>Date & Time</th>
             </tr>
           </thead>
