--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@ and open the template in the editor.
 
   <div id="shedule" class="demo4">
     <div class="tab-two">
-      <button class="demo5" onclick="infofunc2(event, 'leadr1')" id="mybutton3"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
-      <button class="demo5" onclick="infofunc2(event, 'leadr2')" disabled><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr1')"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr2')" id="mybutton3"><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
     </div>
 
       <div id="leadr1" class="demo6">
@@ -633,9 +633,9 @@ and open the template in the editor.
 
         <table id="pakTable4" class="leaderboard-bg stable">
           <tr class="title-1">
-            <th>M Arfan Agency</th>
+            <th>ZEE Agency</th>
             <th><img src="img/VS.png" alt="" class="vs"></th> 
-            <th>Good Hope Agency</th>
+            <th>M Arfan Agency</th>
             <th>Date & Time</th>
           </tr>
           <!-- <tr>
@@ -661,14 +661,14 @@ and open the template in the editor.
 
        <br>
 
-        <table id="pakTable5" class="leaderboard-bg stable">
+        <!-- <table id="pakTable5" class="leaderboard-bg stable">
           <tr class="title-1">
             <th>ZEE Agency</th>
             <th><img src="img/VS.png" alt="" class="vs"></th> 
             <th>King Khan Agency</th>
             <th>Date & Time</th>
           </tr>
-          <!-- <tr>
+          <tr>
             <td><a href="http://www.kktv1.com/m/?roomid=602780845">602780845</a></td>
             <td></td>
             <td><a href="http://www.kktv1.com/m/?roomid=644707786">644707786</a></td>
@@ -683,13 +683,13 @@ and open the template in the editor.
             <td><a href="http://www.kktv1.com/m/?roomid=627070013">627070013</a></td>
             <td></td>
             <td><a href="http://www.kktv1.com/m/?roomid=644729261">644729261</a></td>
-          </tr> -->
+          </tr>
 
           <tbody id="pakistanTableBody5">
 
           </tbody>
 
-        </table>
+        </table> -->
 
         <br>
 <!-- 
