--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@ and open the template in the editor.
 
   <div id="shedule" class="demo4">
     <div class="tab-two">
-      <button class="demo5" onclick="infofunc2(event, 'leadr1')" id="mybutton3"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
-      <button class="demo5" onclick="infofunc2(event, 'leadr2')" disabled><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr1')"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr2')" id="mybutton3"><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
     </div>
 
       <div id="leadr1" class="demo6">
@@ -633,9 +633,9 @@ and open the template in the editor.
 
         <table id="pakTable4" class="leaderboard-bg stable">
           <tr class="title-1">
-            <th>ZEE Agency</th>
+            <th>Tamim Agency</th>
             <th><img src="img/VS.png" alt="" class="vs"></th> 
-            <th>M Arfan Agency</th>
+            <th>ZEE Agency</th>
             <th>Date & Time</th>
           </tr>
           <!-- <tr>
