--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@ and open the template in the editor.
         <table id="pakTable1" class="leaderboard-bg stable">
           <thead>
             <tr class="title-1">
-              <th>M Arfan Agency</th>
+              <th>GuRo 786 Agency</th>
               <th><img src="img/VS.png" alt="" class="vs" /></th>
-              <th>ZEE</th>
+              <th>Knowledge is power</th>
               <th>Date & Time</th>
             </tr>
           </thead>
@@ -513,9 +513,9 @@ and open the template in the editor.
         <table id="pakTable2" class="leaderboard-bg stable">
           <thead>
             <tr class="title-1">
-              <th>King Khan Agency</th>
+              <th>king khan agency</th>
               <th><img src="img/VS.png" alt="" class="vs" /></th>
-              <th>Elipro</th>
+              <th>ZEE Agency</th>
               <th>Date & Time</th>
             </tr>
           </thead>
