table-header-changed

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ and open the template in the editor.
 
         <table id="pakTable4" class="leaderboard-bg stable">
           <tr class="title-1">
-            <th>King Khan Agency</th>
+            <th>Knowledge is power</th>
             <th><img src="img/VS.png" alt="" class="vs"></th> 
             <th>ZEE Agency</th>
             <th>Date & Time</th>
