git schedule round1

--- a/index.html
+++ b/index.html
@@ -466,14 +466,14 @@ and open the template in the editor.
 
 <div class="tab-two">
   <button class="demo3" onclick="infofunc1(event, 'shedule')" id="mybutton2"><img src="img/Shedule-select-btn.png" alt="" class="shedule-btn"></button>
-  <button class="demo3" onclick="infofunc1(event, 'leaderboard')"><img src="img/Lederboard-Select-btn.png" alt="" class="shedule-btn"   ></button>
+  <button class="demo3" onclick="infofunc1(event, 'leaderboard')" disabled ><img src="img/Lederboard-Select-btn.png" alt="" class="shedule-btn"   ></button>
 </div>
 
 
   <div id="shedule" class="demo4">
     <div class="tab-two">
-      <button class="demo5" onclick="infofunc2(event, 'leadr1')"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
-      <button class="demo5" onclick="infofunc2(event, 'leadr2')" id="mybutton3"><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr1')" id="mybutton3"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr2')" disabled><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
     </div>
 
       <div id="leadr1" class="demo6">
@@ -481,31 +481,31 @@ and open the template in the editor.
         <table id="pakTable1" class="leaderboard-bg stable">
           <thead>
             <tr class="title-1">
-              <th>GuRo 786 Agency</th>
+              <th>Elitepro</th>
               <th><img src="img/VS.png" alt="" class="vs" /></th>
-              <th>Knowledge is power</th>
+              <th>ZEE Agency</th>
               <th>Date & Time</th>
             </tr>
           </thead>
-          <!-- <tr>
-            <td><a href="http://www.kktv1.com/m/?roomid=631543176">631543176</a></td>
+          <tr>
+            <td><a href="http://www.kktv1.com/m/?roomid=559484595">559484595</a></td>
             <td></td>
-            <td><a href="http://www.kktv1.com/m/?roomid=634167880">634167880</a></td>
-            <td rowspan="3">23-11-2023<br>IST: 21:30-21:45</td>
+            <td><a href="http://www.kktv1.com/m/?roomid=621840252">621840252</a></td>
+            <td rowspan="3">26-11-2024<br>IST: 21:30-21:45</td>
           </tr>
           <tr>
-            <td><a href="http://www.kktv1.com/m/?roomid=641336042">641336042</a></td>
+            <td><a href="http://www.kktv1.com/m/?roomid=579352217">579352217</a></td>
             <td></td>
-            <td><a href="http://www.kktv1.com/m/?roomid=641804608">641804608</a></td>
+            <td><a href="http://www.kktv1.com/m/?roomid=554296415">554296415</a></td>
           </tr>
           <tr>
-            <td><a href="http://www.kktv1.com/m/?roomid=635468097">635468097</a></td>
+            <td><a href="http://www.kktv1.com/m/?roomid=584478340">584478340</a></td>
             <td></td>
-            <td><a href="http://www.kktv1.com/m/?roomid=645263988">645263988</a></td>
-          </tr>   -->
-          <tbody id="pakistanTableBody1">
+            <td><a href="http://www.kktv1.com/m/?roomid=572453908">572453908</a></td>
+          </tr>  
+          <!-- <tbody id="pakistanTableBody1">
 
-          </tbody>
+          </tbody> -->
         </table>
 
         <br>
@@ -513,32 +513,32 @@ and open the template in the editor.
         <table id="pakTable2" class="leaderboard-bg stable">
           <thead>
             <tr class="title-1">
-              <th>Knowledge is power</th>
+              <th>King Khan Agency</th>
               <th><img src="img/VS.png" alt="" class="vs" /></th>
-              <th>ZEE Agency</th>
+              <th>Knowledge is Power</th>
               <th>Date & Time</th>
             </tr>
           </thead>
-          <!-- <tr>
-            <td><a href="http://www.kktv1.com/m/?roomid=602780845">602780845</a></td>
+          <tr>
+            <td><a href="http://www.kktv1.com/m/?roomid=629712572">629712572</a></td>
             <td></td>
-            <td><a href="http://www.kktv1.com/m/?roomid=614097927">614097927</a></td>
-            <td rowspan="3">23-11-2023<br>IST: 22:00-22:15</td>
+            <td><a href="http://www.kktv1.com/m/?roomid=641453323">641453323</a></td>
+            <td rowspan="3">26-11-2024<br>IST: 22:00-22:15</td>
           </tr>
           <tr>
-            <td><a href="http://www.kktv1.com/m/?roomid=595538998">595538998</a></td>
+            <td><a href="http://www.kktv1.com/m/?roomid=631843240">631843240</a></td>
             <td></td>
-            <td><a href="http://www.kktv1.com/m/?roomid=625793134">625793134</a></td>
+            <td><a href="http://www.kktv1.com/m/?roomid=614499338">614499338</a></td>
           </tr>
           <tr>
-            <td><a href="http://www.kktv1.com/m/?roomid=593932001">593932001</a></td>
+            <td><a href="http://www.kktv1.com/m/?roomid=647910385">647910385</a></td>
             <td></td>
-            <td><a href="http://www.kktv1.com/m/?roomid=635145031">635145031</a></td>
-          </tr> -->
+            <td><a href="http://www.kktv1.com/m/?roomid=656105306">656105306</a></td>
+          </tr>
 
-          <tbody id="pakistanTableBody2">
+          <!-- <tbody id="pakistanTableBody2">
 
-          </tbody>
+          </tbody> -->
 
         </table>
 
