--- a/index.html
+++ b/index.html
@@ -466,14 +466,14 @@ and open the template in the editor.
 
 <div class="tab-two">
   <button class="demo3" onclick="infofunc1(event, 'shedule')" id="mybutton2"><img src="img/Shedule-select-btn.png" alt="" class="shedule-btn"></button>
-  <button class="demo3" onclick="infofunc1(event, 'leaderboard')" disabled ><img src="img/Lederboard-Select-btn.png" alt="" class="shedule-btn"   ></button>
+  <button class="demo3" onclick="infofunc1(event, 'leaderboard')"><img src="img/Lederboard-Select-btn.png" alt="" class="shedule-btn"   ></button>
 </div>
 
 
   <div id="shedule" class="demo4">
     <div class="tab-two">
-      <button class="demo5" onclick="infofunc2(event, 'leadr1')" id="mybutton3"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
-      <button class="demo5" onclick="infofunc2(event, 'leadr2')" disabled><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr1')"><img src="img/Round-1-Select-btn.png" alt="" class="round-btn"></button>
+      <button class="demo5" onclick="infofunc2(event, 'leadr2')" id="mybutton3"><img src="img/Round-2-select-btn.png" alt="" class="round-btn"></button>
     </div>
 
       <div id="leadr1" class="demo6">
@@ -636,9 +636,9 @@ and open the template in the editor.
 
         <table id="pakTable4" class="leaderboard-bg stable">
           <tr class="title-1">
-            <th>Knowledge is power</th>
-            <th><img src="img/VS.png" alt="" class="vs"></th> 
             <th>ZEE Agency</th>
+            <th><img src="img/VS.png" alt="" class="vs"></th> 
+            <th>King Khan Agency</th>
             <th>Date & Time</th>
           </tr>
           <!-- <tr>
